--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^27.0.1",
+    "@emotion/react": "^11.7.1",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
@@ -13,18 +13,20 @@
     "typescript": "^4.4.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "devDependencies": {
-    "prettier": "^2.5.1"
+    "@emotion/babel-plugin": "^11.7.1",
+    "customize-cra": "^1.0.0",
+    "prettier": "^2.5.1",
+    "react-app-rewired": "^2.1.8"
   },
   "browserslist": {
     "production": [
