--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
+    "@hookform/resolvers": "^2.8.5",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "immer": "^9.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.5",
     "react-scripts": "5.0.0",
-    "typescript": "^4.4.2"
+    "typescript": "^4.5.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-app-rewired start",
