--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "buffer": "^6.0.3",
     "immer": "^9.0.7",
+    "near-api-js": "^0.44.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
