--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "typescript": "^4.5.4",
     "yup": "^0.32.11"
   },
+  "devDependencies": {
+    "@emotion/babel-plugin": "^11.7.1",
+    "@types/bn.js": "^5.1.0",
+    "customize-cra": "^1.0.0",
+    "prettier": "^2.5.1",
+    "react-app-rewired": "^2.1.8"
+  },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
@@ -27,12 +34,6 @@
     "extends": [
       "react-app"
     ]
-  },
-  "devDependencies": {
-    "@emotion/babel-plugin": "^11.7.1",
-    "customize-cra": "^1.0.0",
-    "prettier": "^2.5.1",
-    "react-app-rewired": "^2.1.8"
   },
   "browserslist": {
     "production": [
