--- a/package.json
+++ b/package.json
@@ -8,22 +8,26 @@
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/bn.js": "^5.1.0",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "immer": "^9.0.7",
     "near-api-js": "^0.44.2",
+    "near-seed-phrase": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-scripts": "5.0.0",
+    "stream-browserify": "^3.0.0",
     "typescript": "^4.5.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.1",
-    "@types/bn.js": "^5.1.0",
     "customize-cra": "^1.0.0",
     "prettier": "^2.5.1",
-    "react-app-rewired": "^2.1.8"
+    "react-app-rewired": "^2.1.8",
+    "webpack": "^5.68.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
