Update eslint rules

--- a/package.json
+++ b/package.json
@@ -32,12 +32,8 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "lint": "eslint src",
     "pretti": "prettier src"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
   },
   "browserslist": {
     "production": [
